# GraphvizCodeViewer

./: .gitignore  README.md
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/graphviz_code_viewer/: about.py  desktop.py  program.old.py  program.py
src/graphviz_code_viewer/modules/: configure.py
