[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphviz_code_viewer"
version = "0.1.0"
description = "Program to edit and view Graphviz code."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5",
    "deep-consultation"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/GraphvizCodeViewer/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/GraphvizCodeViewer/tree/main/doc"
"Source" = "https://github.com/trucomanx/GraphvizCodeViewer"

[project.scripts]
"graphviz-code-viewer" = "graphviz_code_viewer.program:main"

[tool.setuptools]
packages = ["graphviz_code_viewer", "graphviz_code_viewer.modules"]

[tool.setuptools.package-data]
"graphviz_code_viewer" = ["icons/logo.png"]
